docs: update image path in index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Introduction</h2>
-        <img src="static/images/0.png" alt="framework" width="95%"/>
+        <img src="static/images/framework.png" alt="framework" width="95%"/>
         <div class="content has-text-justified">
           <p>
             <!-- Despite the superior capabilities of <b>Multimodal Large Language Models (MLLMs)</b> across diverse tasks, they still face significant trustworthiness challenges. Yet, current literature on the assessment of trustworthy MLLMs remains limited, lacking <b>a holistic evaluation</b> to offer thorough insights into future improvements. -->
