--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <div class="is-size-5 publication-authors">
         <br>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Xiao Yang</a><sup style="color:#1db2ec">1</sup>,</span>
+          <a href="https://mla-trust.github.io/">Xiao Yang*</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Jiawei Chen</a><sup style="color:#f31a1a">2</sup>,</span>
+          <a href="https://mla-trust.github.io/">Jiawei Chen*</a><sup style="color:#f31a1a">2</sup>,</span>
         <span class="author-block">
           <a href="https://mla-trust.github.io/">Jun Luo</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
