--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <!-- PDF Link. -->
           <span class="link-block">
             <!-- @PAN TODO: change links -->
-            <a href="https://mla-trust.github.io/"
+            <a href="https://arxiv.org/pdf/2506.01616"
                class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                   <i class="fas fa-file-pdf"></i>
@@ -91,7 +91,7 @@
             </a>
           </span>
           <span class="link-block">
-            <a href="https://mla-trust.github.io/"
+            <a href="https://arxiv.org/pdf/2506.01616"
                class="external-link button is-normal is-rounded is-dark">
             <!-- <a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf"
                class="external-link button is-normal is-rounded is-dark"> -->
