--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
       <div class="is-size-5 publication-authors">
         <br>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Xiao Yang*</a><sup style="color:#1db2ec">1</sup>,</span>
+          <a href="https://scholar.google.com/citations?user=bwkwp0MAAAAJ&hl=en">Xiao Yang*</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Jiawei Chen*</a><sup style="color:#f31a1a">2</sup>,</span>
+          <a href="https://scholar.google.com/citations?user=RZcc1VwAAAAJ&hl=en">Jiawei Chen*</a><sup style="color:#f31a1a">2</sup>,</span>
         <span class="author-block">
           <a href="https://mla-trust.github.io/">Jun Luo</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Zhengwei Fang</a><sup style="color:#1db2ec">1</sup>,</span>
+          <a href="https://scholar.google.com/citations?user=v5lIRxUAAAAJ&hl=en&oi=ao">Zhengwei Fang</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Yinpeng Dong</a><sup style="color:#1db2ec">1</sup>,</span>
+          <a href="https://scholar.google.com/citations?user=6_4ad84AAAAJ&hl=en&oi=ao">Yinpeng Dong</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Hang Su</a><sup style="color:#1db2ec">1</sup>,</span>
+          <a href="https://scholar.google.com/citations?user=dxN1_X0AAAAJ&hl=en">Hang Su</a><sup style="color:#1db2ec">1</sup>,</span>
         <span class="author-block">
-          <a href="https://mla-trust.github.io/">Jun Zhu</a><sup style="color:#1db2ec">1</sup>,</span>
+          <a href="https://scholar.google.com/citations?user=axsP38wAAAAJ&hl=en">Jun Zhu</a><sup style="color:#1db2ec">1</sup>,</span>
       </div>
 
       <div class="is-size-5 publication-authors">
