--- a/index.html
+++ b/index.html
@@ -247,14 +247,12 @@
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
     <pre>
       <code>
-@misc{zhang2024benchmarking,
-      title={MLA-Trust: Benchmarking Trustworthiness of Multimodal LLM Agents in GUI Environments}, 
-      author={Xiao Yang, Jiawei Chen, Jun Luo, Zhengwei Fang, Yinpeng Dong, Hang Su, Jun Zhu},
-      year={2025},
-      eprint={2506.01616},
-      archivePrefix={arXiv},
-      primaryClass={cs.AI}
-    }     
+@article{yang2025mla,
+  title={MLA-Trust: Benchmarking Trustworthiness of Multimodal LLM Agents in GUI Environments},
+  author={Yang, Xiao and Chen, Jiawei and Luo, Jun and Fang, Zhengwei and Dong, Yinpeng and Su, Hang and Zhu, Jun},
+  journal={arXiv preprint arXiv:2506.01616},
+  year={2025}
+}     
     </code></pre>
   </div>
 </section> 
