--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </span>
           <!-- Code Link. -->
           <span class="link-block">
-            <a href="https://mla-trust.github.io/"
+            <a href="https://github.com/thu-ml/MLA-Trust"
                class="external-link button is-normal is-rounded is-dark">
               <span class="icon">
                   <i class="fab fa-github"></i>
